5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1590_1571.log
== SUBMITION (2019-03-29 09:32:40) 
-- CODE:
texto = "Bruna linda"
print(texto.upper("Bruna linda"))
-- EXECUTION TIME:
0.210796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1571/main.py", line 2, in <module>
    print(texto.upper("Bruna linda"))
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:32:42) 
-- CODE:
texto = "Bruna linda"
print(texto.upper("Bruna linda"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper("Bruna linda"))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:33:26) 
-- CODE:
texto = "Bruna linda"
print(texto.upper)
-- EXECUTION TIME:
0.170302
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
<built-in method upper of str object at 0x7f3c30498e70>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:35:14) 
-- CODE:
texto = "Bruna Linda."
print(texto.upper())
-- EXECUTION TIME:
0.133995
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA LINDA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:36:32) 
-- CODE:
texto = "Bruna Linda."
print(texto. upper())
-- OUTPUT:
BRUNA LINDA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:36:41) 
-- CODE:
texto = "Bruna Linda."
print(texto. upper())
-- EXECUTION TIME:
0.138066
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA LINDA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:36:57) 
-- CODE:
texto = "Bruna Linda."
print(texto.upper())
-- OUTPUT:
BRUNA LINDA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:37:06) 
-- CODE:
texto = "Bruna Linda."
print(texto.upper())
-- EXECUTION TIME:
0.17293
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA LINDA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:38:00) 
-- CODE:
texto = "Bruna Linda."
print(texto.upper())
-- OUTPUT:
BRUNA LINDA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:38:02) 
-- CODE:
texto = "Bruna Linda."
print(texto.upper())
-- EXECUTION TIME:
0.144662
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA LINDA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:41:03) 
-- CODE:
texto = "Bruna Linda"
print(texto.upper())
-- OUTPUT:
BRUNA LINDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:41:14) 
-- CODE:
texto = "Bruna Linda"
print(texto.upper())
-- EXECUTION TIME:
0.134966
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA LINDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:41:37) 
-- CODE:
texto = "Bruna linda"
print(texto.upper())
-- EXECUTION TIME:
0.186068
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA LINDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:41:47) 
-- CODE:
texto = "Bruna linda"
print(texto.upper())
-- OUTPUT:
BRUNA LINDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:42:16) 
-- CODE:
texto = "Bruna linda"
print(texto.upper())
-- OUTPUT:
BRUNA LINDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:42:56) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- EXECUTION TIME:
0.20732
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:43:00) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:43:31) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto. upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:43:37) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto. upper())
-- EXECUTION TIME:
0.174093
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:44:57) 
-- CODE:
texto = "Amo o Python."
print(texto.upper())
-- OUTPUT:
AMO O PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:45:02) 
-- CODE:
texto = "Amo o Python."
print(texto.upper())
-- EXECUTION TIME:
0.112297
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
AMO O PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:45:51) 
-- CODE:
texto = "Amo o Python. upper"
print(texto.upper())
-- OUTPUT:
AMO O PYTHON. UPPER
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:45:58) 
-- CODE:
texto = "Amo o Python. upper"
print(texto.upper())
-- EXECUTION TIME:
0.120349
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
AMO O PYTHON. UPPER
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:46:09) 
-- CODE:
texto = "Amo o Python"
print(texto.upper())
-- EXECUTION TIME:
0.191887
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
AMO O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:47:02) 
-- CODE:
texto = "Amo o Python"
print(texto.upper())
-- OUTPUT:
AMO O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:47:07) 
-- CODE:
texto = "Amo o Python"
print(texto.upper())
-- EXECUTION TIME:
0.163995
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
AMO O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:48:05) 
-- CODE:
texto = "Amo o Python"
print(texto.upper())
-- OUTPUT:
AMO O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:48:19) 
-- CODE:
texto = "Amo o Python"

print(texto.upper())
-- EXECUTION TIME:
0.119433
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
AMO O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:49:24) 
-- CODE:
texto = "brunasilva de almeida"

print(texto.upper())
-- OUTPUT:
BRUNASILVA DE ALMEIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:49:32) 
-- CODE:
texto = "brunasilva de almeida"

print(texto.upper())
-- EXECUTION TIME:
0.169843
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNASILVA DE ALMEIDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:51:18) 
-- CODE:
texto = "Bruna Silva de Almeida"

print(texto.upper ())
-- OUTPUT:
BRUNA SILVA DE ALMEIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:51:25) 
-- CODE:
texto = "Bruna Silva de Almeida"

print(texto.upper ())
-- EXECUTION TIME:
0.217729
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA SILVA DE ALMEIDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:51:35) 
-- CODE:
texto = "Bruna Silva de Almeida"

print (texto.upper ())
-- EXECUTION TIME:
0.183921
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA SILVA DE ALMEIDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:52:25) 
-- CODE:
texto = "Bruna Silva de Almeida"

print(texto, upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(texto, upper())
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 09:52:46) 
-- CODE:
texto = "Bruna Silva de Almeida"

print(texto.upper())
-- OUTPUT:
BRUNA SILVA DE ALMEIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 09:52:54) 
-- CODE:
texto = "Bruna Silva de Almeida"

print(texto.upper())
-- EXECUTION TIME:
0.172948
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA SILVA DE ALMEIDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:27:17) 
-- CODE:
from math import*
texto = "Bruna Silva de Almeida"

print(texto.upper())
-- EXECUTION TIME:
0.160853
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
BRUNA SILVA DE ALMEIDA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:27:27) 
-- CODE:
from math import*
texto = "Bruna Silva de Almeida"
print(texto.upper())
-- OUTPUT:
BRUNA SILVA DE ALMEIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:27:45) 
-- CODE:
from math import*
string = "Bruna Silva de Almeida"
print(texto.upper())
-- EXECUTION TIME:
0.135001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1571/main.py", line 3, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:53:08) 
-- CODE:

string = input("Bruna Silva de Almeida")
print(texto.upper())
-- EXECUTION TIME:
0.28985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1571/main.py", line 3, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:53:22) 
-- CODE:
string = input("Bruna Silva de Almeida")
print(string.upper())
-- EXECUTION TIME:
0.149695
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
